adjusted stats floats to correctly be displayed on mobile

--- a/src/styles/views/Stats.scss
+++ b/src/styles/views/Stats.scss
@@ -19,6 +19,7 @@
         width: 100%;
     }
     &.float {
+        height: 4.5em;
         border-style: solid;
         border-width: 1px;
         border-radius: 8px;
@@ -41,12 +42,18 @@
         background: #808080;
         padding-top: 1px;
         margin-top: 0px;
-        font-size: 13;
+        font-size: large;
         font-weight: 800;
         box-shadow: none;
+        text-align: center;
     }
     & p,
     h2 {
         margin: 0.5em 0;
+    }
+    & .hub-button {
+        float: right;
+        width: 22%;
+        margin-top: 1.5%;
     }
 }
